--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Backroads || Tour Company</title>
+    <title>BackRoads Travel Tours</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <!-- font-awesome -->
@@ -16,30 +16,422 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>flexbox backroads</h1>
     <!-- header  -->
+    <header id="home">
+      <!-- navbar -->
+      <nav class="navbar">
+        <div class="nav-center">
+          <!-- nav header -->
+          <div class="nav-header">
+            <img src="./images/logo.svg" class="nav-logo" alt="" />
+            <button type="button" class="nav-toggle" id="nav-toggle">
+              <i class="fas fa-bars"></i>
+            </button>
+          </div>
+          <!-- end of nav header -->
+          <!-- nav links -->
+          <ul class="nav-links" id="nav-links">
+            <!-- first link -->
+            <li>
+              <a href="#home" class="nav-link scroll-link">home</a>
+            </li>
+            <!-- end of first link -->
+            <!-- second link -->
+            <li>
+              <a href="#about" class="nav-link scroll-link">about</a>
+            </li>
+            <!-- end of second link -->
+            <!-- third link -->
+            <li>
+              <a href="#services" class="nav-link scroll-link">services</a>
+            </li>
+            <!-- end of third link -->
+            <!-- fourth link -->
+            <li>
+              <a href="#featured" class="nav-link scroll-link">featured</a>
+            </li>
+            <!-- end of fourth link -->
+            <!-- fifth link -->
+            <li>
+              <a href="#gallery" class="nav-link scroll-link">gallery</a>
+            </li>
+            <!-- end of fifth link -->
+          </ul>
+          <!-- end of nav links -->
+          <!-- nav icons -->
+          <ul class="nav-icons">
+            <!-- first icon -->
+            <li>
+              <a href="https://www.facebook.com" target="_blank" class="nav-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <!-- end of first icon -->
+            <!-- second icon -->
+            <li>
+              <a href="https://www.twitter.com" target="_blank" class="nav-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <!-- end of second icon -->
+            <!-- third icon -->
+            <li>
+              <a href="https://www.instagram.com" target="_blank" class="nav-icon">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <!-- end of third icon -->
+          </ul>
+          <!-- end of nav icons -->
+        </div>
+      </nav>
+      <!-- hero -->
+      <div class="hero">
+        <div class="hero-banner">
+          <h1>continue exploring</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde facere earum maxime magnam harum corrupti</p>
+          <a href="#featured" class="btn hero-btn scroll-link">explore tours</a>
+        </div>
+      </div>
+    </header>
     <!-- end of header  -->
-
     <!-- about section -->
+    <section class="section" id="about">
+      <!-- section-title -->
+      <div class="section-title">
+        <h2>about <span>us</span></h2>
+      </div>
+      <!-- end of section-title -->
+      <div class="section-center about-center">
+        <!-- about img wrapper -->
+        <article class="about-img">
+          <img 
+          src="./images/about.jpeg" 
+          class="about-photo" 
+          alt="awesome beach"
+          />
+        </article>  
+        <!-- about info -->
+        <article class="about-info">
+          <h3>explore the difference</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem necessitatibus recusandae quia exercitationem, repudiandae praesentium itaque! Neque commodi voluptate consequuntur.</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores cupiditate, atque veritatis saepe magni blanditiis doloremque tempora deserunt ex eum ipsa qui aperiam.</p>
+          <a href="#" class="btn">read more</a>
+        </article>
+      </div>
+    </section>
     <!-- end of about section -->
-
     <!-- services -->
+    <section class="section services" id="services">
+      <!-- section-title -->
+      <div class="section-title">
+        <h2>our <span>services</span></h2>
+      </div>
+      <!-- end of section-title -->
+      <div class="section-center services-center">
+        <!-- first service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-wallet fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">save money</h4>
+            <p class="service-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis id, odio fugiat ullam ex est.</p>
+          </div>
+        </article>
+        <!-- end of first service -->
+        <!-- second service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-tree fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">endless hiking</h4>
+            <p class="service-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa alias, porro quidem dolor voluptas ducimus ex est.</p>
+          </div>
+        </article>
+        <!-- end of second service -->
+        <!-- third service -->
+        <article class="service">
+          <span class="service-icon">
+            <i class="fas fa-socks fa-fw"></i>
+          </span>
+          <div class="service-info">
+            <h4 class="service-title">amazing comfort</h4>
+            <p class="service-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum nesciunt cupiditate incidunt? Nisi, libero sapiente!</p>
+          </div>
+        </article>
+        <!-- end of third service -->
+      </div>
+    </section>
     <!--end services -->
-
     <!-- featured tours -->
+    <section class="section" id="featured">
+      <!-- section-title -->
+      <div class="section-title">
+        <h2>featured <span>tours</span></h2>
+      </div>
+      <!-- end of section-title -->
+      <!-- featured-center -->
+      <div class="section-center featured-center">
+        <!-- first tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-1.jpeg" class="tour-img" alt="Tibet" />
+            <p class="tour-date">August 26th, 2020</p>
+          </div>
+          <!-- first tour info -->
+          <div class="tour-info">
+            <div class="tour-title">
+              <h4>Tibet Adventure</h4>
+              <p>14 days</p>
+            </div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt odit, maxime necessitatibus deleniti ad explicabo iusto culpa! Harum, ex illo!</p>
+            <div class="tour-footer">
+              <p>
+                <span>
+                  <i class="fas fa-map"></i>
+                  China
+                </span>
+              </p>
+              <p>from $2,100</p>
+            </div>
+          </div>
+        </article>
+        <!-- end of first tour -->
+        <!-- second tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-2.jpeg" class="tour-img" alt="Indonesia" />
+            <p class="tour-date">September 15th, 2020</p>
+          </div>
+        <!-- second tour info -->
+        <div class="tour-info">
+          <div class="tour-title">
+            <h4>Best of Java</h4>
+            <p>10 days</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium neque, suscipit rerum minima ad voluptatum aut soluta nostrum iste amet.</p>
+          <div class="tour-footer">
+            <p>
+              <span>
+                <i class="fas fa-map"></i>
+                Indonesia
+              </span>
+            </p>
+            <p>from $1,400</p>
+          </div>
+        </div>
+        </article>
+        <!-- end of second tour -->
+        <!-- third tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-3.jpeg" class="tour-img" alt="Hong Kong" />
+            <p class="tour-date">October 1st, 2020</p>
+          </div>
+        <!-- third tour info -->
+        <div class="tour-info">
+          <div class="tour-title">
+            <h4>explore Hong Kong</h4>
+            <p>7 days</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi, exercitationem suscipit. Tempora, blanditiis? Veritatis quod deserunt adipisci dolor rerum eaque.</p>
+          <div class="tour-footer">
+            <p>
+              <span>
+                <i class="fas fa-map"></i>
+                Hong Kong
+              </span>
+            </p>
+            <p>from $5,000</p>
+          </div>
+        </div>
+        </article>
+        <!-- end of third tour -->
+        <!-- fourth tour -->
+        <article class="tour-card">
+          <div class="tour-img-container">
+            <img src="./images/tour-4.jpeg" class="tour-img" alt="Kenya" />
+            <p class="tour-date">December 5th, 2020</p>
+          </div>
+        <!-- fourth tour info -->
+        <div class="tour-info">
+          <div class="tour-title">
+            <h4>Kenya Safari</h4>
+            <p>14 days</p>
+          </div>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates ipsum cumque quis. Molestiae vel porro hic dolor, dolore accusamus adipisci.</p>
+          <div class="tour-footer">
+            <p>
+              <span>
+                <i class="fas fa-map"></i>
+                Kenya
+              </span>
+            </p>
+            <p>from $3,300</p>
+          </div>
+        </div>
+        </article>
+        <!-- end of fourth tour -->
+      </div>
+      <div class="tour-btn">
+        <a href="#" class="btn">all tours</a>
+      </div>
+    </section>
     <!-- end of featured tours -->
-
     <!-- contact -->
-
+    <section class="section contact" id="contact">
+      <div class="section-center contact-center">
+        <!-- contact title -->
+        <article class="contact-title">
+          <h3>want the latest tour info and updates?</h3>
+          <p>Sign up for our newsletter and stay up to date.</p>
+        </article>
+        <!-- contact form -->
+        <form class="contact-form">
+          <input 
+          type="email" 
+          name="email" 
+          class="form-control" 
+          placeholder="your email"
+          />
+          <button type="submit" class="btn-submit">submit</button>
+        </form>
+      </div>
+    </section>
     <!-- end of contact -->
-
     <!-- gallery  -->
-
+    <section id="gallery">
+      <div class="gallery-center">
+        <!-- first item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-1.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of first item -->
+        <!-- second item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-2.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of second item -->
+        <!-- third item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-3.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of third item -->
+        <!-- fourth item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-4.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of fourth item -->
+        <!-- fifth item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-5.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of fifth item -->
+        <!-- sixth item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-6.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of sixth item -->
+        <!-- seventh item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-7.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of seventh item -->
+        <!-- eighth item -->
+        <article class="gallery-img-container">
+          <img src="./images/tour-8.jpeg" class="gallery-img" alt="" />
+          <a href="#" class="gallery-icon">
+            <i class="fas fa-search"></i>
+          </a>
+        </article>
+        <!-- end of eighth item -->
+      </div>
+    </section>
     <!-- end of gallery  -->
-
-    <!-- footer -->
-
+<!-- footer -->
+    <footer class="section footer">
+    <!-- footer links -->
+    <ul class="footer-links">
+    <!-- first link -->
+    <li>
+    <a href="#home" class="footer-link scroll-link">home</a>
+    </li>
+    <!-- end of first link -->
+    <!-- second link -->
+    <li>
+    <a href="#about" class="footer-link scroll-link">about</a>
+    </li>
+    <!-- end of second link -->
+    <!-- third link -->
+    <li>
+    <a href="#services" class="footer-link scroll-link">services</a>
+    </li>
+    <!-- end of third link -->
+    <!-- fourth link -->
+    <li>
+    <a href="#featured" class="footer-link scroll-link">featured</a>
+    </li>
+    <!-- end of fourth link -->
+    <!-- fifth link -->
+    <li>
+    <a href="#gallery" class="footer-link scroll-link">gallery</a>
+    </li>
+    <!-- end of fifth link -->
+  </ul>
+  <!-- end of footer links -->
+  <!-- footer icons -->
+  <ul class="footer-icons">
+    <!-- first icon -->
+    <li>
+      <a href="https://www.facebook.com" target="_blank" class="footer-icon">
+      <i class="fab fa-facebook"></i>
+      </a>
+    </li>
+    <!-- end of first icon -->
+    <!-- second icon -->
+    <li>
+      <a href="https://www.twitter.com" target="_blank" class="footer-icon">
+        <i class="fab fa-twitter"></i>
+      </a>
+    </li>
+    <!-- end of second icon -->
+    <!-- third icon -->
+    <li>
+      <a href="https://www.instagram.com" target="_blank" class="footer-icon">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </li>
+    <!-- end of third icon -->
+  </ul>
+  <!-- end of footer icons -->
+  <p class="copyright">
+    &copy; <span id="date"></span> Backroads Travel Tours. All rights reserved.
+  </p>
+</footer>
     <!-- js -->
     <script src="./js/app.js"></script>
-  </body>
+</body>
 </html>
